--- a/ConfBand.qmd
+++ b/ConfBand.qmd
@@ -32,7 +32,7 @@ draft: true # set to false once the build is running
 published: false # will be set to true once accepted
 format:
   computo-pdf: default
-  
+  computo-html: default
 ---
 
 
